Texture baking crashes blender #43859

Closed
opened 2015-03-02 10:59:43 +01:00 by Fabian Emmes · 5 comments

Verified crash on different systems:
i5 Sandy Bridge, Windows 8.1 x64, Blender Version: 2.73a (release build) and current nightly (56935e2)
i5 Sandy Bridge, Archlinux x64, Blender Version: 2.73a (bbf09d9) bug.crash.txt
i7 Sandy Bridge, Windows 7, Blender Version: 2.73a (release build)

Short description of error
Blender crashes when baking texture.

Exact steps for others to reproduce the error

  1. Open bake_crash.blend
  2. Select cube in origin
  3. Press Bake (bpy.ops.object.bake_image)
Verified crash on different systems: i5 Sandy Bridge, Windows 8.1 x64, Blender Version: 2.73a (release build) and current nightly (56935e2) i5 Sandy Bridge, Archlinux x64, Blender Version: 2.73a (bbf09d9) [bug.crash.txt](https://archive.blender.org/developer/F146687/bug.crash.txt) i7 Sandy Bridge, Windows 7, Blender Version: 2.73a (release build) **Short description of error** Blender crashes when baking texture. **Exact steps for others to reproduce the error** 1. Open [bake_crash.blend](https://archive.blender.org/developer/F146688/bake_crash.blend) 2. Select cube in origin 3. Press Bake (bpy.ops.object.bake_image)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @der_fab

Added subscriber: @der_fab

This issue was referenced by bc20a745be

This issue was referenced by bc20a745bee32fa9d3f4d40c51c27798d50f581a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bc20a745be.

Closed by commit bc20a745be.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43859
No description provided.